--- a/Inf/AnsibleConf/vars.yml
+++ b/Inf/AnsibleConf/vars.yml
@@ -1,3 +1,3 @@
 HostName: my-container-service-1
-HostAddress: mydomain.com
+HostAddress: my-container-service-1.service.local
 NagiosPassword: mypassword
